--- a/src/jatek/KoPapirOlloGui.form
+++ b/src/jatek/KoPapirOlloGui.form
@@ -168,6 +168,9 @@
             <Property name="editable" type="boolean" value="false"/>
             <Property name="focusable" type="boolean" value="false"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtGepActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel4">
           <Properties>
@@ -181,6 +184,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Ind&#xed;t"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnInditActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
