--- a/src/jatek/KoPapirOlloGui.form
+++ b/src/jatek/KoPapirOlloGui.form
@@ -143,6 +143,8 @@
             <Property name="text" type="java.lang.String" value="Irj ide!"/>
           </Properties>
           <Events>
+            <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtValasztasFocusGained"/>
+            <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtValasztasFocusLost"/>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtValasztasActionPerformed"/>
           </Events>
         </Component>
